--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.9",
     "expo": "~52.0.36",
     "expo-blur": "~14.0.3",
@@ -41,10 +43,12 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
