--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
+    "htmlparser2": "^10.0.0",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -48,15 +49,18 @@
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
