--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
+    "formik": "^2.4.6",
     "htmlparser2": "^10.0.0",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
@@ -60,7 +61,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
