Added eas.json for eas deployment

--- a/app.json
+++ b/app.json
@@ -16,7 +16,11 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "ie.shomi"
+      "package": "ie.shomi",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -45,6 +49,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "5b751fd7-3d0b-4271-9f9d-b4bf2dc415bc"
+      }
+    },
+    "owner": "troy583"
   }
 }
