--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
     "@10play/tentap-editor": "^0.6.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.49.3",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "expo": "~52.0.42",
     "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.7",
+    "expo-dev-client": "~5.0.19",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -64,10 +68,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "uuid": "^11.1.0",
-    "yup": "^1.6.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "expo-notifications": "~0.29.14",
-    "expo-dev-client": "~5.0.19"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
